# plant-simulation

./: Cargo.toml
configs/species/: Equisetum arvense.ron
src/: main.rs
src/engine/: camera.rs  cell.rs  cell_events.rs  cell_renderer.rs  delaunay.rs  gui.rs  mod.rs  selection.rs  shader.wgsl  simulation.rs  state.rs  vertex.rs
src/model/: cell.rs  entity.rs  hormone.rs  mod.rs  nutrient.rs  organ.rs  species.rs  tissue.rs
src/model/cell/: mod.rs
src/shared/: cell.rs  math.rs  mod.rs  overlapping_cells.rs  plane.rs  point.rs
