[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

### Release mode optimizations

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

### dependencies

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
rand = "0.8.5"
bevy = { version = "0.16", features = ["dynamic_linking"] }
bevy_panorbit_camera = { version = "0.27", features = ["bevy_egui"] }
bevy_picking = "0.16"
bevy_egui = "0.35"
ron = "0.10.1"
serde = "1.0.219"
notify = "8.2.0"
